[gd_scene load_steps=5 format=2]

[ext_resource path="res://mini_game/mini_game.gd" type="Script" id=1]
[ext_resource path="res://mini_game/img/Halloween_Singles_48x48_223.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 76.0066

[node name="mini_game" type="Node2D"]
script = ExtResource( 1 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
unique_name_in_owner = true
position = Vector2( 0, -68 )
frames = SubResource( 1 )

[node name="can_do_mini_game_area_2d" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="collision_shape_2d" type="CollisionShape2D" parent="can_do_mini_game_area_2d"]
shape = SubResource( 2 )

[node name="force_5_z_index" type="Node2D" parent="."]
z_index = 5

[node name="label" type="Label" parent="force_5_z_index"]
unique_name_in_owner = true
margin_left = -253.0
margin_top = -217.0
margin_right = 252.0
margin_bottom = -113.0
grow_horizontal = 2
grow_vertical = 2
text = "ทำภารกิจ"
align = 1
valign = 1

[connection signal="body_entered" from="can_do_mini_game_area_2d" to="." method="_on_can_do_mini_game_area_2d_body_entered"]
[connection signal="body_exited" from="can_do_mini_game_area_2d" to="." method="_on_can_do_mini_game_area_2d_body_exited"]
[connection signal="input_event" from="can_do_mini_game_area_2d" to="." method="_on_can_do_mini_game_area_2d_input_event"]
